# measure-detector-v2

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml
rust/measure-detector-cli/: Cargo.toml
rust/measure-detector-cli/src/: main.rs
src/measure_detector_v2/: bench.py  detector.py  optimize_onnx.py  postprocess.py  server.py
