[package]
name = "measure-detector-v2-cli"
version = "2.0.0"
edition = "2024"
license = "CC-BY-NC-SA-4.0"
authors = ["Simon Waloschek <waloschek@pm.me>"]

[[bin]]
name = "measure-detector-v2"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
fast_image_resize = { version = "5", features = ["image"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "tiff", "webp"] }
ort = { version = "2.0.0-rc.10", default-features = false, features = ["std", "api-24", "load-dynamic", "download-binaries", "tls-rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
